# autonomous-excavator

./: .gitmodules
bounding-box/: CMakeLists.txt  package.xml
bounding-box/launch/: bb_launch.py
bounding-box/src/: bounding_box.cpp  closest_distance.cpp  zed_bounding_box.cpp
excavator-visualizer/: CMakeLists.txt  package.xml
excavator-visualizer/config/: machine_visualizer.rviz
excavator-visualizer/launch/: visualizer_launch.py
excavator-visualizer/src/: excavator_tf2_broadcaster.cpp  stroke_publisher.cpp
excavator-visualizer/urdf/: electrical_excavator.urdf.xacro
marching-cubes/: CMakeLists.txt  package.xml
marching-cubes/src/: marching_cubes.cu
object-tracking/: CMakeLists.txt  package.xml
